Fix the unwanted erroOccurred signals from finished call replies

Ensure that erroOccurred doesn't emmited for the replies that are
finished.

Fixes: QTBUG-123996
Change-Id: Ifb6b79b1aa43ff90c633ab248b5ed03a8dda8b55
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit 913b19c8c3c7881d23a2d3ec9e64d18650c114b1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>